# pypubmech

./: README.md  setup.cfg
.github/workflows/: publish.yaml
.ipynb_checkpoints/: pyproject-checkpoint.toml
pypubmech/: pypubmech.py
pypubmech/.ipynb_checkpoints/: __init__-checkpoint.py
