[metadata]
name = pypubmech
version = 0.1
author = Anass Tinakoua
author_email = a.tinakoua@gmail.com
description = A Python package for fetching PubMed articles with MeSH support
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/atinak/pypubmech
project_urls =
    Bug Tracker = https://github.com/atinak/pypubmech/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    pandas
    metapub
    biopython
    tqdm

[options.packages.find]
where = src